# hs-haskellbook-excercises

./: .gitignore  ch12.hs  ch13.hs  cipher.hs  db.hs  huttonsRazor.hs  jammin.hs  misc.hs  phone.hs  stack.yaml  test.hs  tree.hs  types.hs
ch14/: TAGS  excercises-gentypes.hs  exercises.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/morse/: TAGS  morse.cabal  stack.yaml
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch14/wordnumber/: WordNumber.cabal  WordNumber.hs  WordNumberTest.hs
ch15/: WordNumber.hs  excercises-15.14.hs  excercises-chapter.hs  excercises.hs
ch16/: excercises-16.10.hs  excercises-16.17.hs
ch17/: badmonoid.hs  excercises-chapter-combos.hs  excercises-chapter.hs  excercises-constant-instance.hs  excercises-eitherapplicative.hs  excercises-identity.hs  excercises-listapplicative.hs  excercises-lookups.hs  listmonoid.hs
ch18/: excercises-chapter.hs  excercises-chapter2.hs  excercises.hs
ch20/: excercises-chapter.hs  excercises.hs
ch21/: either.hs  excercises.hs
ch22/: example.hs  excercises-chapter.hs  reader.hs
ch23/: examples.hs  excercises-chapter.hs  excercises-state.hs  fizzbuzz.hs
ch24/: AltParsing.hs  FractionalDecimal.hs  INI.hs  LearnParsers.hs  excercises-chapter.hs  excercises-chapter2and3.hs  excercises-chapter3.hs  excercises-chapter5.hs  excercises-chapter6.hs  excercises.hs
ch25/: excercises.hs
ch26/: excercises.hs
cipher/: cipher.hs
hangman/: hangman.cabal
hangman/src/: Main.hs
