name:         WordNumber
version:      0.1.0.0
license-file: LICENSE
author:       Chicken Little
maintainer:   sky@isfalling.org
category:     Text
build-type:   Simple
cabal-version: >=1.10

library
  exposed-modules:     WordNumber
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
  hs-source-dirs:      .
  default-language:    Haskell2010

test-suite tests
  ghc-options:    -Wall -fno-warn-orphans
  type:           exitcode-stdio-1.0
  main-is:        WordNumberTest.hs
  hs-source-dirs: .
  build-depends:  base
                     , WordNumber
                     , hspec
  default-language:    Haskell2010

